--- a/QLLH.Web/ClientApp/src/app/app.component.html
+++ b/QLLH.Web/ClientApp/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main style="display: flex;">
-  <app-side-bar style="flex-basis: 17%; background-color: #32373d; height: 100vh;"></app-side-bar>
+  <app-side-bar style="flex-basis: 15%; background-color: #32373d;"></app-side-bar>
   <div class="main" style="flex-basis: 75%; margin: 0 auto; margin-top: 30px;">
     <router-outlet></router-outlet>
   </div>
