--- a/QLLH.Web/ClientApp/src/app/chi-tiet-tkb-theo-giao-vien/chi-tiet-tkb-theo-giao-vien.component.html
+++ b/QLLH.Web/ClientApp/src/app/chi-tiet-tkb-theo-giao-vien/chi-tiet-tkb-theo-giao-vien.component.html
@@ -8,19 +8,14 @@
           </a>
         </div>
         <div class="capNhatBtnTKB">
-          <button type="button" class="btn btn-outline-success" (click)="capNhatDanhSachThoiKhoaBieu()">
+          <button type="button" class="btn btn-outline-success" (click)="openModalCapNhatTKB()">
             <i class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></i> Cập nhật
-          </button>
-        </div>
-        <div class="lamMoiBtnTKB">
-          <button type="button" class="btn btn-outline-primary" (click)="lamMoiThoiKhoaBieu()">
-            <i class="fa fa-plus-square-o fa-lg" aria-hidden="true" ></i> Làm mới
           </button>
         </div>
       </div>
     </nav>
   </div>
-  <div class="tableTKBGiaoVien">
+  <div class="tableTKBGiaoVien table-responsive-lg">
     <table class="table">
       <thead>
         <tr>
@@ -86,4 +81,22 @@
     </table>
   </div>
 </div>
+
+<!-- Modal Cap Nhat Thoi Khoa Bieu -->
+<div class="modal fade" id="modalCapNhatTKB" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Cập nhật thời khóa biểu</h5>
+      </div>
+      <div class="modal-body" style="text-align: center;">
+        Bạn có muốn cập nhật thời khóa biểu của giáo viên này ko ?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" (click)="capNhatDanhSachThoiKhoaBieu()">Cập nhật</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End Modal -->
 
