--- a/QLLH.Web/ClientApp/src/app/quan-ly-tkb-theo-giao-vien/quan-ly-tkb-theo-giao-vien.component.css
+++ b/QLLH.Web/ClientApp/src/app/quan-ly-tkb-theo-giao-vien/quan-ly-tkb-theo-giao-vien.component.css
@@ -10,7 +10,7 @@
 .btn-success {
     color: white;
     text-decoration: none;
-    margin-right: 10px;
+    margin-left: 20px;
 }
 
 .btn-danger {
