--- a/QLLH.Web/ClientApp/src/app/chi-tiet-lop-hoc/chi-tiet-lop-hoc.component.css
+++ b/QLLH.Web/ClientApp/src/app/chi-tiet-lop-hoc/chi-tiet-lop-hoc.component.css
@@ -10,6 +10,9 @@
 .btn-success {
     color: white;
     text-decoration: none;
+}
+
+#giaoVien .btn-success {
     margin-left: 20px;
 }
 
@@ -29,7 +32,7 @@ div.row div.label {
 .btn-danger {
     color: white;
     text-decoration: none;
-    margin-left: 20px;
+    margin-left: 10px;
 }
 
 .btn-danger:hover {
