--- a/QLLH.Web/ClientApp/src/app/app.component.html
+++ b/QLLH.Web/ClientApp/src/app/app.component.html
@@ -1,6 +1,6 @@
-<main style="display: flex;">
-  <app-side-bar style="flex-basis: 15%; background-color: #32373d;"></app-side-bar>
-  <div class="main" style="flex-basis: 75%; margin: 0 auto; margin-top: 30px;">
+<main id="root">
+  <app-side-bar class="main-sidebar" style="background: #32373d;"></app-side-bar>
+  <div class="main">
     <router-outlet></router-outlet>
   </div>
 </main>
