--- a/QLLH.Web/ClientApp/src/app/side-bar/side-bar.component.html
+++ b/QLLH.Web/ClientApp/src/app/side-bar/side-bar.component.html
@@ -1,5 +1,5 @@
 <nav id="sidebar">
-    <div class="img bg-wrap text-center py-4">
+    <div class="img bg-wrap py-4">
     </div>
     <ul class="list-unstyled components mb-5">
         <li>
